; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_symtab_pop.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_symtab_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { %struct.symtab* }
%struct.symtab = type { %struct.symtab*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.parser*)* @symtab_pop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @symtab_pop(%struct.parser* %0) #0 {
  %2 = alloca %struct.parser*, align 8
  %3 = alloca %struct.symtab*, align 8
  store %struct.parser* %0, %struct.parser** %2, align 8
  %4 = load %struct.parser*, %struct.parser** %2, align 8
  %5 = getelementptr inbounds %struct.parser, %struct.parser* %4, i32 0, i32 0
  %6 = load %struct.symtab*, %struct.symtab** %5, align 8
  store %struct.symtab* %6, %struct.symtab** %3, align 8
  %7 = load %struct.symtab*, %struct.symtab** %3, align 8
  %8 = call i32 @assert(%struct.symtab* %7)
  %9 = load %struct.symtab*, %struct.symtab** %3, align 8
  %10 = getelementptr inbounds %struct.symtab, %struct.symtab* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @hash_free(i32 %11)
  %13 = load %struct.symtab*, %struct.symtab** %3, align 8
  %14 = getelementptr inbounds %struct.symtab, %struct.symtab* %13, i32 0, i32 0
  %15 = load %struct.symtab*, %struct.symtab** %14, align 8
  %16 = load %struct.parser*, %struct.parser** %2, align 8
  %17 = getelementptr inbounds %struct.parser, %struct.parser* %16, i32 0, i32 0
  store %struct.symtab* %15, %struct.symtab** %17, align 8
  %18 = load %struct.symtab*, %struct.symtab** %3, align 8
  %19 = call i32 @free(%struct.symtab* %18)
  ret void
}

declare dso_local i32 @assert(%struct.symtab*) #1

declare dso_local i32 @hash_free(i32) #1

declare dso_local i32 @free(%struct.symtab*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
